update standinds via rabbitmq
